--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFamilyHolidayPlaner</title>
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/stylesheet.css">
 
 </head>
 
@@ -16,18 +17,18 @@
     <div>
         <div class="header-basic">
             <header>
-                <h1 class="topic">My Holiday Family Planer</h1>
-
-                <img class="background" src="./images/hintergrund.jpg">
-
+                <h1 class="topic"></h1>
+                <img class="background" src="Images/hintergrund.jpg">
             </header>
         </div>
         <div class="nav-basic">
             <nav class="container">
                 <div class="topnav">
-                    <li><a href="#" class="links">Home</a></li>
-                    <li><a href="#" class="links">Ziel</a></li>
-                    <li><a href="#" class="links">Abstimmung</a></li>
+                    <li><a href="index.html" class="links">Home</a></li>
+                    <li><a href="ziele.html" class="links">Ziel</a></li>
+                    <li><a href="family.html" class="links">Familienmitglieder</a></li>
+                    <li><a href="archiv.html" class="links">Archiv</a></li>
+                    <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
                 </div>
 
             </nav>
@@ -38,7 +39,7 @@
                     <div class="article-container">
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Istanbul.jpg" alt="Istanbul Moschee" />
+                                <img src="Images/Istanbul.jpg" alt="Istanbul Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -50,7 +51,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Mallorca.jpeg" alt="Fahrrad-Tour Mallorca" />
+                                <img src="Images/Mallorca.jpeg" alt="Fahrrad-Tour Mallorca" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -62,7 +63,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Bali.jpg" alt="Moschee" />
+                                <img src="Images/Bali.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -74,7 +75,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Spanien.jpg" alt="Moschee" />
+                                <img src="Images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -86,7 +87,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Spanien.jpg" alt="Moschee" />
+                                <img src="Images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -98,7 +99,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Spanien.jpg" alt="Moschee" />
+                                <img src="Images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -110,7 +111,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Spanien.jpg" alt="Moschee" />
+                                <img src="Images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -122,7 +123,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="./images/Spanien.jpg" alt="Moschee" />
+                                <img src="Images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -147,6 +148,7 @@
 
             </footer>
         </div>
+
     </div>
 
 </body>
