Weitere Seiten, Navileiste, Familienmitglieder Basis

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFamilyHolidayPlaner</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 
 </head>
 
@@ -24,8 +24,8 @@
         <div class="nav-basic">
             <nav class="container">
                 <div class="topnav">
-                    <li><a href="index.html" class="links">Home</a></li>
-                    <li><a href="ziele.html" class="links">Ziel</a></li>
+                    <li><a href="MeinsMRK.html" class="links">Home</a></li>
+                    <li><a href="ziele.html" class="links">Ziele</a></li>
                     <li><a href="family.html" class="links">Familienmitglieder</a></li>
                     <li><a href="archiv.html" class="links">Archiv</a></li>
                     <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
@@ -33,6 +33,7 @@
 
             </nav>
         </div>
+        
         <div class="article-basic">
             <div>
                 <div class="site-container">
