--- a/public/family.html
+++ b/public/family.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Familienmitglieder</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="familycss.css">
+    <link rel="stylesheet" href="familyCSS.css">
 
 </head>
 
@@ -32,7 +32,7 @@
 
         <div class="column">
             <div class ="card">
-                <img src="ebu.PNG" alt="Ebubekir" height="325px" width="100%" >
+                <img src="./images/ebu.PNG" alt="Ebubekir" height="325px" width="100%" >
                 <div class="container">
                     <h2>Ebubekir Misir</h2>
                     <div class="slidecontainer">
@@ -48,7 +48,7 @@
 
         <div class="column">
             <div class ="card">
-                <img src="atilla.png" alt="Atilla" height="325px" width="100%">
+                <img src="./images/atilla.png" alt="Atilla" height="325px" width="100%">
                 <div class="container">
                     <h2>Atilla Durdu</h2>
                     <div class="slidecontainer">
@@ -63,7 +63,7 @@
 
         <div class="column">
             <div class ="card">
-                <img src="burak.png" alt="Burak" height="325px" width="100%">
+                <img src="./images/burak.png" alt="Burak" height="325px" width="100%">
                 <div class="container">
                     <h2>Burak Seyrek</h2>
                     <div class="slidecontainer">
@@ -78,7 +78,7 @@
 
     <div class="column">
         <div class ="card">
-            <img src="aylin.png" alt="Aylin" height="325px" width="100%">
+            <img src="./images/aylin.png" alt="Aylin" height="325px" width="100%">
             <div class="container">
                 <h2>Aylin Yamac</h2>
                 <div class="slidecontainer">
