--- a/public/family.html
+++ b/public/family.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Familienmitglieder</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="familyCSS.css">
+    <link rel="stylesheet" href="./css/familyCSS.css">
 
 </head>
 
