ziele top nav erstellt und seite angepasst

--- a/public/family.html
+++ b/public/family.html
@@ -20,7 +20,7 @@
     <div class="nav-basic">
         <nav class="container">
             <div class="topnav">
-                <li><a href="MeinsMRK.html" class="links">Home</a></li>
+                <li><a href="index.html" class="links">Home</a></li>
                 <li><a href="ziele.html" class="links">Ziele</a></li>
                 <li><a href="family.html" class="links">Familienmitglieder</a></li>
                 <li><a href="archiv.html" class="links">Archiv</a></li>
@@ -30,68 +30,69 @@
         </nav>
     </div>
 
-        <div class="column">
-            <div class ="card">
-                <img src="./images/ebu.PNG" alt="Ebubekir" height="325px" width="100%" >
-                <div class="container">
-                    <h2>Ebubekir Misir</h2>
-                    <div class="slidecontainer">
-                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                      </div>
-                    <p class ="title"> Mutter</p>
-                    <p> Ay günesden daha güzelmis</p>
+    <div class="column">
+        <div class="card">
+            <img src="./images/ebu.PNG" alt="Ebubekir" height="325px" width="100%">
+            <div class="container">
+                <h2>Ebubekir Misir</h2>
+                <div class="slidecontainer">
+                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
                 </div>
+                <p class="title"> Mutter</p>
+                <p> Ay günesden daha güzelmis</p>
             </div>
         </div>
     </div>
+    </div>
 
 
-        <div class="column">
-            <div class ="card">
-                <img src="./images/atilla.png" alt="Atilla" height="325px" width="100%">
-                <div class="container">
-                    <h2>Atilla Durdu</h2>
-                    <div class="slidecontainer">
-                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                      </div>
-                    <p class ="title"> Onkel </p>
-                    <p> Oggi hanno fatto bene pero domani chi sa non si sa mai perche giovani giocatori sempre posso fare tutta la caso</p>
+    <div class="column">
+        <div class="card">
+            <img src="./images/atilla.png" alt="Atilla" height="325px" width="100%">
+            <div class="container">
+                <h2>Atilla Durdu</h2>
+                <div class="slidecontainer">
+                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
                 </div>
+                <p class="title"> Onkel </p>
+                <p> Oggi hanno fatto bene pero domani chi sa non si sa mai perche giovani giocatori sempre posso fare
+                    tutta la caso</p>
             </div>
         </div>
     </div>
-
-        <div class="column">
-            <div class ="card">
-                <img src="./images/burak.png" alt="Burak" height="325px" width="100%">
-                <div class="container">
-                    <h2>Burak Seyrek</h2>
-                    <div class="slidecontainer">
-                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                      </div>
-                    <p class ="title"> Vater</p>
-                    <p> What dedin Gülüm?</p>
-                </div>
-            </div>
-        </div>
     </div>
 
     <div class="column">
-        <div class ="card">
+        <div class="card">
+            <img src="./images/burak.png" alt="Burak" height="325px" width="100%">
+            <div class="container">
+                <h2>Burak Seyrek</h2>
+                <div class="slidecontainer">
+                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                </div>
+                <p class="title"> Vater</p>
+                <p> What dedin Gülüm?</p>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="column">
+        <div class="card">
             <img src="./images/aylin.png" alt="Aylin" height="325px" width="100%">
             <div class="container">
                 <h2>Aylin Yamac</h2>
                 <div class="slidecontainer">
                     <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                  </div>
-                <p class ="title"> Abla</p>
+                </div>
+                <p class="title"> Abla</p>
                 <p> 63 aber nicht AMG</p>
             </div>
         </div>
     </div>
-</div>
+    </div>
 
-    
+
 
 </body>
 
