--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div>
         <div class="header-basic">
             <header>
-                <h1 class="topic"></h1>
+                <h1 class="topic">Urlaubsplaner</h1>
                 <img class="background" src="Images/hintergrund.jpg">
             </header>
         </div>
