--- a/public/family.html
+++ b/public/family.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Familienmitglieder</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/familyCSS.css">
+    <link rel="stylesheet" href="./css/famsheet.css">
 
 </head>
 
 <body>
     <div class="header-basic">
         <header>
-            <h1 class="topic"></h1>
+            <h1 class="topic">Urlaubsplaner</h1>
             <img class="background" src="Images/hintergrund.jpg">
         </header>
     </div>
@@ -30,65 +30,58 @@
         </nav>
     </div>
 
-    <div class="column">
-        <div class="card">
-            <img src="./images/ebu.PNG" alt="Ebubekir" height="325px" width="100%">
-            <div class="container">
-                <h2>Ebubekir Misir</h2>
-                <div class="slidecontainer">
-                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+    <div class="article-basic">
+        <div>
+            <div class="site-container">
+                <div class="article-container">
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/atilla.png" alt="Istanbul Moschee" />
+                        </figure>
+                        <!-- <div class="slidecontainer">
+                            <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+
+                </div>-->
+                        <div class="article-content">
+                            <a href="#" class="card-category">Vater</a>
+
+                            <p class="card-excerpt">Oggi hanno fatto bene pero domani chi sa non si sa mai perche
+                                giovani giocatori sempre posso fare
+                                tutta la caso </p>
+                        </div>
+
+                    </article>
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/ebu.PNG" alt="Fahrrad-Tour Mallorca" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="#" class="card-category">Mutter</a>
+                            <p class="card-excerpt"> Ay günesden daha güzelmis</p>
+                        </div>
+                    </article>
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/aylin.png" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="#" class="card-category">Tochter</a>
+                            <p class="card-excerpt">63 aber nicht AMG</p>
+                        </div>
+                    </article>
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/burak.png" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="#" class="card-category">Sohn</a>
+                            <p class="card-excerpt"> What dedin Gülüm?</p>
+                        </div>
+
                 </div>
-                <p class="title"> Mutter</p>
-                <p> Ay günesden daha güzelmis</p>
             </div>
         </div>
-    </div>
-    </div>
-
-
-    <div class="column">
-        <div class="card">
-            <img src="./images/atilla.png" alt="Atilla" height="325px" width="100%">
-            <div class="container">
-                <h2>Atilla Durdu</h2>
-                <div class="slidecontainer">
-                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                </div>
-                <p class="title"> Onkel </p>
-                <p> Oggi hanno fatto bene pero domani chi sa non si sa mai perche giovani giocatori sempre posso fare
-                    tutta la caso</p>
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <div class="column">
-        <div class="card">
-            <img src="./images/burak.png" alt="Burak" height="325px" width="100%">
-            <div class="container">
-                <h2>Burak Seyrek</h2>
-                <div class="slidecontainer">
-                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                </div>
-                <p class="title"> Vater</p>
-                <p> What dedin Gülüm?</p>
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <div class="column">
-        <div class="card">
-            <img src="./images/aylin.png" alt="Aylin" height="325px" width="100%">
-            <div class="container">
-                <h2>Aylin Yamac</h2>
-                <div class="slidecontainer">
-                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                </div>
-                <p class="title"> Abla</p>
-                <p> 63 aber nicht AMG</p>
-            </div>
-        </div>
+        <article>
     </div>
     </div>
 
