--- a/public/ziele.html
+++ b/public/ziele.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFamilyHolidayPlaner</title>
     <link rel="stylesheet" href="./css/stylesheet.css" href="./css/zielesheet.css" href="./css/familyCSS.css">
+    <script language="javascript" type="text/javascript" src="js/abstimmen.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,6 @@
                 <li><a href="archiv.html" class="links">Archiv</a></li>
                 <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
             </div>
-
         </nav>
     </div>
     <div class="footer-basic">
