ziele angepasst mit voteing system

--- a/public/ziele.html
+++ b/public/ziele.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFamilyHolidayPlaner</title>
-    <link rel="stylesheet" href="./css/stylesheet.css" href="./css/zielesheet.css" href="./css/familyCSS.css">
-    <script language="javascript" type="text/javascript" src="js/abstimmen.js"></script>
+    <link rel="stylesheet" href="./css/zielesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -27,6 +28,28 @@
             </div>
         </nav>
     </div>
+    <div class="vote">
+        <div class="article-basic">
+            <div class="contain">
+                <h2> Voting System</h2>
+                <img src="" />
+                <div class="voting">
+                    <button id="likebtn">
+                        <i class="fa fa-thumbs-up"></i>
+                    </button>
+                    <input type="number" id="input1" value="0" name="">
+
+                    <button id="dislikebtn">
+                        <i class="fa fa-thumbs-down"></i>
+                    </button>
+                    <input type="number" id="input2" value="0" name="">
+                </div>
+                <article>
+
+                </article>
+            </div>
+        </div>
+    </div>
     <div class="footer-basic">
         <footer>
             <p>Impressum</p>
@@ -34,7 +57,7 @@
 
         </footer>
     </div>
-
+    <script language="javascript" type="text/javascript" src="js/abstimmen.js"></script>
 </body>
 
 </html>
