--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFamilyHolidayPlaner</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/stylesheet.css">
 
 </head>
@@ -44,10 +45,15 @@
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
-                                <h3 class="card-title"> Istanbul erleben, die Tour durch die Stadt</h3>
+                                <h3 class="card-title"> Istanbul erleben mit der Tour durch die Stadt</h3>
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                    <p class="prio">Priorität: <span id="demo"></span></p>
+
+                                </div>
                             </div>
                         </article>
                         <article class="article-card">
@@ -60,6 +66,12 @@
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRanger">
+                                    <p class="prio">Priorität: <span id="demoTwo"></span></p>
+
+
+                                </div>
                             </div>
                         </article>
                         <article class="article-card">
@@ -72,6 +84,10 @@
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                    <p class="prio">Priorität: <span id="demo"></span></p>
+                                </div>
                             </div>
                         </article>
                         <article class="article-card">
@@ -84,6 +100,10 @@
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                    <p class="prio">Priorität: <span id="demo"></span></p>
+                                </div>
                             </div>
                         </article>
                         <article class="article-card">
@@ -96,6 +116,10 @@
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                    <p class="prio">Priorität: <span id="demo"></span></p>
+                                </div>
                             </div>
                         </article>
                         <article class="article-card">
@@ -108,6 +132,10 @@
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                    <p class="prio">Priorität: <span id="demo"></span></p>
+                                </div>
                             </div>
                         </article>
                         <article class="article-card">
@@ -120,6 +148,10 @@
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                    <p class="prio">Priorität: <span id="demo"></span></p>
+                                </div>
                             </div>
                         </article>
                         <article class="article-card">
@@ -132,6 +164,10 @@
                                 <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                                     nihil
                                     expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                    <p class="prio">Priorität: <span id="demo"></span></p>
+                                </div>
                             </div>
                         </article>
                     </div>
@@ -151,6 +187,7 @@
         </div>
 
     </div>
+    <script src="js/main.js"></script>
 
 </body>
 
