Ziele, Familienmitglieder hinzufügen

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <div class="header-basic">
             <header>
                 <h1 class="topic">Urlaubsplaner</h1>
-                <img class="background" src="Images/hintergrund.jpg">
+                <img class="background" src="./images/hintergrund.jpg">
             </header>
         </div>
         <div class="nav-basic">
@@ -40,7 +40,7 @@
                     <div class="article-container">
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Istanbul.jpg" alt="Istanbul Moschee" />
+                                <img src="./images/Istanbul.jpg" alt="Istanbul Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -52,7 +52,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Mallorca.jpeg" alt="Fahrrad-Tour Mallorca" />
+                                <img src="./images/Mallorca.jpeg" alt="Fahrrad-Tour Mallorca" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -64,7 +64,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Bali.jpg" alt="Moschee" />
+                                <img src="./images/Bali.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -76,7 +76,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Spanien.jpg" alt="Moschee" />
+                                <img src="./images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -88,7 +88,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Spanien.jpg" alt="Moschee" />
+                                <img src="./images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -100,7 +100,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Spanien.jpg" alt="Moschee" />
+                                <img src="./images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -112,7 +112,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Spanien.jpg" alt="Moschee" />
+                                <img src="./images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
@@ -124,7 +124,7 @@
                         </article>
                         <article class="article-card">
                             <figure class="article-image">
-                                <img src="Images/Spanien.jpg" alt="Moschee" />
+                                <img src="./images/Spanien.jpg" alt="Moschee" />
                             </figure>
                             <div class="article-content">
                                 <a href="#" class="card-category">Reiseziel</a>
