Einloggen button auf der homeseite

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/stylesheet.css">
-
+    <link rel="stylesheet" href="./css/dialoge.css">
 </head>
 
 
@@ -34,26 +34,34 @@
 
             </nav>
         </div>
+        </figure>
+        <div class="article-content">
+            <div class="addFamBtn"></div>
+            <button id="famBtn">Familienmitglied hinzufügen</button>
+        </div>
 
         <div class="article-basic">
             <div>
                 <div class="site-container">
                     <div class="article-container">
+
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="footer-basic">
-            <footer>
-                <p>Impressum</p>
+    <div class="footer-basic">
+        <footer>
+            <p>Impressum</p>
 
 
-            </footer>
-        </div>
+        </footer>
+    </div>
 
     </div>
     <script src="js/main.js"></script>
+
 
 </body>
 
