--- a/public/index.html
+++ b/public/index.html
@@ -35,20 +35,36 @@
             </nav>
         </div>
         </figure>
-        <div class="article-content">
-            <div class="addFamBtn"></div>
-            <button id="famBtn">Familienmitglied hinzufügen</button>
+        <div class="addFamBtn">
+            <button id="famBtn">Anmelden</button>
         </div>
+        <div class="article-content">
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <div class="page">
+                        <span class="close">&times;</span>
+                        <label for="choose" class="chooseText"> Wählen Sie aus wer Sie sind:</label>
+                        <select name="choose" id="chooseDrop">
+                            <option id="chooseOption" value="Ebu"> Ebu</option>
+                            <option id="chooseOption" value="Burak"> Burak</option>
+                        </select>
+                        <button id="submitBtn">Auswählen</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
         <div class="article-basic">
             <div>
                 <div class="site-container">
                     <div class="article-container">
-
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 
     <div class="footer-basic">
