Holidayklasse Datentyp ID in String verändert

--- a/public/index.html
+++ b/public/index.html
@@ -65,15 +65,12 @@
             </div>
         </div>
 
-    </div>
 
-    <div class="footer-basic">
-        <footer>
-            <p>Impressum</p>
-
-
-        </footer>
-    </div>
+        <div class="footer-basic">
+            <footer>
+                <p><a href="kontakt.html" id="kontakt">Kontakt</a></p>
+            </footer>
+        </div>
 
     </div>
     <script src="js/main.js"></script>
