Background Image Navileiste, bug fix Urlaubs und Familienkarte

--- a/public/family.html
+++ b/public/family.html
@@ -18,7 +18,7 @@
 <body>
     <div class="header-basic">
         <header>
-            <h1 class="topic">Urlaubsplaner</h1>
+            <h1 class="topic">Familienmitglieder</h1>
             <img class="background" src="./images/hintergrund.jpg">
         </header>
     </div>
