--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div>
         <div class="header-basic">
             <header>
-                <h1 class="topic">Urlaubsplaner</h1>
+                <h1 class="topic">Home</h1>
                 <img class="background" src="./images/hintergrund.jpg">
             </header>
         </div>
