--- a/public/ziele.html
+++ b/public/ziele.html
@@ -20,7 +20,7 @@
 <body>
     <div class="header-basic">
         <header>
-            <h1 class="topic">Urlaubsplaner</h1>
+            <h1 class="topic">Ziele</h1>
             <img class="background" src="Images/hintergrund.jpg">
         </header>
     </div>
