index seite mit neuen main.js mit backend verbunden

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,10 @@
         <div class="article-basic">
             <div>
                 <div class="site-container">
-                    <div class="article-container">
+                    <div class="article-container" id="acontainer">
                     </div>
+                </div>
+                <div class="cardFooter">
                 </div>
             </div>
         </div>
@@ -71,7 +73,7 @@
         </div>
 
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/main2.js"></script>
 
 
 
