Lösch Btn Familienmitglieder v1 & Edit Btn Familienmitglieder v0.1

--- a/public/family.html
+++ b/public/family.html
@@ -11,8 +11,7 @@
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 
@@ -71,11 +70,8 @@
 
         <a class="addFamilymember-dialog-daten">
             <form id="createFamily" action="" onsubmit="createFamilyMember()">
-                <div id="display-image"></div>
-                <!--  <input type="file" id="image-input" accept="image/jpeg, image/png, image/jpg">-->
                 <input type="text" placeholder="Name" id="nameTag" class="eingabefeld">
                 <input type="date" placeholder="Geburtstag" id="bdayTag" class="eingabefeld">
-
 
                 <button type="submit">Hinzufügen!</button>
 
